# opencal-gui-pyqt

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES.rst  Dockerfile  Makefile  README.rst  environment.yml  init-skeleton.sh  meta.make  meta.sh  opencal  opencal-git-wrapper.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.sh  setup.py
docs/: Makefile  api.rst  conf.py  developer.rst  index.rst  init_sphinx.sh  intro.rst  make.bat
opcgui/: __init__.py  utils.py
opcgui/qt/: main.py
opcgui/qt/widgets/: editorwidget.py  mainwindow.py  plot.py  richtexteditor.py  searchwiget.py  tagseditor.py  test.py
opcgui/qt/widgets/tabs/: add.py  edit.py  forwardtest.py  review.py  stats.py  tags.py  test.py
opcgui/qt/widgets/tabs/tests/: test_forwardtest.py
