[project]
authors = [
    {name = "Jérémie DECOCK", email = "jd.jdhp@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Framework",
]
description = "Opencal Python GUI"
dynamic = ["dependencies"]
name = "opcgui"
readme = "README.rst"
requires-python = ">=3.8"
version = "0.1.dev0"
# web_site_url = "http://www.jdhp.org/software_en.html#opcgui"

[project.scripts]
opencal = "opcgui.qt.main:main"

[build-system]
requires = [
    'matplotlib',
    'numpy',
    'pandas',
    'pyside6==6.2.2.1',
    'pyyaml',
    'scipy',
    'seaborn',
    'setuptools',
    'stable-baselines3'
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["opcgui"]

# Use requirements.txt to setup dependencies (c.f. https://stackoverflow.com/a/73600610)
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
